# memory-management

05-smart-pointers/: SharedPointer.cpp  make  make_shared.cpp  raw  rawPointer.cpp  shared  unique  uniquePointer.cpp  weak  weakPointer.cpp
examples/: CMakeLists.txt  fibonacci.cpp  unique.cpp
homework/resourceD/: resourceD.cpp
homework/unique_ptr/: CMakeLists.txt  Point.cpp  Point.hpp  main.cpp  test.cpp  uniquePtr.cpp  uniquePtr.hpp
